Fixing alignment of Axis labels and color codings for Vipra's charts and keeping font/style consistent across all of our charts

--- a/project1.css
+++ b/project1.css
@@ -1,10 +1,11 @@
 body {
-    font-family: sans-serif;
-    font-size: 20px;
-    background-color: powderblue
+    background-color: powderblue;
     
 }
 
+a{
+    font-size: 20px;
+}
 p {
     color: #9400D3;
 }
